[package]
name = "crypt3"
version = "0.1.0"
authors = ["Dylan DPC<dylan.dpc@gmail.com>"]
edition = "2018"
description = "Rust clone of the linux crypt command"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/Dylan-DPC/crypt3"

[dependencies]
md5 = "0.6"
ring = "0.13"